(library
 (public_name omcrl2)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq))
 (libraries menhirLib))

(ocamllex
 (modules lexer))

(menhir
 (modules tokens)
 (flags --unused-tokens --only-tokens --table))

(menhir
 (modules tokens sort_parser sort_parser_value)
 (merge_into sort_parser)
 (flags
  --explain
  --unused-tokens
  --table
  (--external-tokens Tokens)))

(menhir
 (modules tokens sort_parser cons_parser cons_parser_value)
 (merge_into cons_parser)
 (flags
  --explain
  --unused-tokens
  --table
  (--external-tokens Tokens)))

(menhir
 (modules tokens sort_parser data_parser data_parser_value)
 (merge_into data_parser)
 (flags
  --explain
  --unused-tokens
  --table
  (--external-tokens Tokens)))

(menhir
 (modules tokens sort_parser map_parser map_parser_value)
 (merge_into map_parser)
 (flags
  --explain
  --unused-tokens
  --table
  (--external-tokens Tokens)))

(menhir
 (modules tokens sort_parser data_parser eqn_parser eqn_parser_value)
 (merge_into eqn_parser)
 (flags
  --explain
  --unused-tokens
  --table
  (--external-tokens Tokens)))

(menhir
 (modules tokens sort_parser glob_parser glob_parser_value)
 (merge_into glob_parser)
 (flags
  --explain
  --unused-tokens
  --table
  (--external-tokens Tokens)))

(menhir
 (modules tokens sort_parser act_parser act_parser_value)
 (merge_into act_parser)
 (flags
  --explain
  --unused-tokens
  --table
  (--external-tokens Tokens)))

(menhir
 (modules tokens sort_parser data_parser proc_parser proc_parser_value)
 (merge_into proc_parser)
 (flags
  --explain
  --unused-tokens
  --table
  --lalr
  (--external-tokens Tokens)))

(menhir
 (modules tokens sort_parser cons_parser data_parser eqn_parser map_parser
   glob_parser act_parser proc_parser mcrl_parser)
 (merge_into mcrl_parser)
 (flags
  --explain
  --table
  --lalr
  (--external-tokens Tokens)))
