(library
 (name lts_fsm)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.make))
 (libraries menhirLib))

(ocamllex
 (modules lexer))

(rule
 (targets parser_messages.ml)
 (deps parser.messages parser.mly)
 (action
  (with-stdout-to
   %{targets}
   (run menhir --compile-errors %{deps}))))

(menhir
 (modules parser)
 (flags --dump --explain --table))
