(library
 (name mcrl2)
 (inline_tests)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.make ppx_inline_test
    ppx_expect bisect_ppx --conditional))
 (libraries menhirLib))

(ocamllex
 (modules lexer))

(rule
 (targets parser_messages.ml)
 (deps parser.messages parser.mly)
 (action
  (with-stdout-to
   %{targets}
   (run menhir --compile-errors %{deps}))))

(menhir
 (modules parser)
 (flags --dump --explain --table --lalr))
